--- a/application/pom.xml
+++ b/application/pom.xml
@@ -11,8 +11,8 @@
     </parent>
 
     <artifactId>application</artifactId>
-    <version>2024.11.3</version>
-    <name>Optimus (2.1.3)</name>
+    <version>2024.12</version>
+    <name>Luminous (2.2.0)</name>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
             <artifactId>base-desktop</artifactId>
-            <version>2024.11</version>
+            <version>2024.12.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
