--- a/app/app-bootstrapper/pom.xml
+++ b/app/app-bootstrapper/pom.xml
@@ -20,8 +20,8 @@
     <dependencies>
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
-            <artifactId>application</artifactId>
-            <version>2024.11.2</version>
+            <artifactId>app-main</artifactId>
+            <version>3.0.0-alpha.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -45,6 +45,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.zyneonstudios.nexus.application.bootstrapper.ApplicationBootstrapper</mainClass>
