--- a/app/app-main/pom.xml
+++ b/app/app-main/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>app-main</artifactId>
-    <version>3.0.0-alpha.1</version>
+    <version>3.0.0-alpha.2</version>
     <name>Luminous</name>
 
     <properties>
@@ -77,6 +77,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.zyneonstudios.Main</mainClass>
