--- a/app/pom.xml
+++ b/app/pom.xml
@@ -10,6 +10,11 @@
         <version>2024.12</version>
     </parent>
 
+    <properties>
+        <revision>3.0.0-alpha.2</revision>
+    </properties>
+    <version>${revision}</version>
+
     <artifactId>app</artifactId>
     <packaging>pom</packaging>
 
