Remove hard rewrite and rollback to soft rewrite: UI update and small bugfixes

--- a/app-api/app-library-api/pom.xml
+++ b/app-api/app-library-api/pom.xml
@@ -17,6 +17,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.zyneonstudios.nexus</groupId>
+            <artifactId>app-shared-api</artifactId>
+            <version>${revision}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
