--- a/app-api/app-shared-api/pom.xml
+++ b/app-api/app-shared-api/pom.xml
@@ -17,6 +17,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.zyneonstudios.nexus</groupId>
+            <artifactId>base-desktop</artifactId>
+            <version>2024.12.6-beta.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
