--- a/app/app-bootstrapper/pom.xml
+++ b/app/app-bootstrapper/pom.xml
@@ -18,10 +18,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.zyneonstudios.nexus</groupId>
-            <artifactId>app-main</artifactId>
-            <version>3.0.0-alpha.1</version>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.5.4</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zyneonstudios.nexus</groupId>
+            <artifactId>base-utilities</artifactId>
+            <version>2024.12-beta.1</version>
         </dependency>
     </dependencies>
 
@@ -47,7 +52,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zyneonstudios.nexus.application.bootstrapper.ApplicationBootstrapper</mainClass>
+                                    <mainClass>com.zyneonstudios.nexus.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
