--- a/app-api/app-shared-api/pom.xml
+++ b/app-api/app-shared-api/pom.xml
@@ -47,7 +47,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zyneonstudios.nexus.api.SharedAPI</mainClass>
+                                    <mainClass>com.zyneonstudios.nexus.SharedAPI</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
