--- a/app/app-main/pom.xml
+++ b/app/app-main/pom.xml
@@ -49,7 +49,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.zyneonstudios.Main</mainClass>
+                            <mainClass>com.zyneonstudios.nexus.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -78,7 +78,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zyneonstudios.Main</mainClass>
+                                    <mainClass>com.zyneonstudios.nexus.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
