--- a/app-api/app-shared-api/pom.xml
+++ b/app-api/app-shared-api/pom.xml
@@ -6,10 +6,11 @@
     <parent>
         <groupId>com.zyneonstudios.nexus</groupId>
         <artifactId>app-api</artifactId>
-        <version>${revision}</version>
+        <version>2025.1</version>
     </parent>
 
     <artifactId>app-shared-api</artifactId>
+    <version>2.4.0-alpha.7</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -20,7 +21,13 @@
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
             <artifactId>base-desktop</artifactId>
-            <version>2024.12.6-beta.1</version>
+            <version>2024.12.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zyneonstudios.nexus</groupId>
+            <artifactId>zyndex-java</artifactId>
+            <version>2024.12.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -47,7 +54,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zyneonstudios.nexus.SharedAPI</mainClass>
+                                    <mainClass>com.zyneonstudios.nexus.application.api.SharedAPI</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
