--- a/app/app-bootstrapper/pom.xml
+++ b/app/app-bootstrapper/pom.xml
@@ -6,10 +6,11 @@
     <parent>
         <groupId>com.zyneonstudios.nexus</groupId>
         <artifactId>app</artifactId>
-        <version>${revision}</version>
+        <version>2025.1</version>
     </parent>
 
     <artifactId>app-bootstrapper</artifactId>
+    <version>${revision}</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
