--- a/app/app-main/pom.xml
+++ b/app/app-main/pom.xml
@@ -7,29 +7,36 @@
     <parent>
         <groupId>com.zyneonstudios.nexus</groupId>
         <artifactId>app</artifactId>
-        <version>${revision}</version>
+        <version>2025.1</version>
     </parent>
 
     <artifactId>app-main</artifactId>
+    <version>${revision}</version>
     <name>Luminous</name>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <nexus.api.version>2.4.0-alpha.6</nexus.api.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
-            <artifactId>zyndex-java</artifactId>
-            <version>2024.9.1</version>
+            <artifactId>app-shared-api</artifactId>
+            <version>${nexus.api.version}</version>
             <scope>compile</scope>
         </dependency>
-
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
-            <artifactId>base-desktop</artifactId>
-            <version>2024.12.5</version>
+            <artifactId>app-library-api</artifactId>
+            <version>${nexus.api.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zyneonstudios.nexus</groupId>
+            <artifactId>app-modules-api</artifactId>
+            <version>${nexus.api.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
@@ -76,6 +83,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.zyneonstudios.nexus.Main</mainClass>
