--- a/app/pom.xml
+++ b/app/pom.xml
@@ -7,14 +7,13 @@
     <parent>
         <groupId>com.zyneonstudios.nexus</groupId>
         <artifactId>nexus-app</artifactId>
-        <version>2024.12</version>
+        <version>2025.1</version>
     </parent>
 
     <properties>
-        <nexus.version>${parent.parent.version}</nexus.version>
-        <revision>2.3.1</revision>
+        <nexus.type>unstable</nexus.type>
+        <revision>2.4.0-alpha.2</revision>
     </properties>
-    <version>${revision}</version>
 
     <artifactId>app</artifactId>
     <packaging>pom</packaging>
