--- a/api/app-shared-api/pom.xml
+++ b/api/app-shared-api/pom.xml
@@ -9,8 +9,8 @@
         <version>2025.1</version>
     </parent>
 
-    <artifactId>app-discover-api</artifactId>
-    <version>2.4.0-alpha.15</version>
+    <artifactId>app-shared-api</artifactId>
+    <version>2.4.0-alpha.16</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
@@ -20,9 +20,15 @@
     <dependencies>
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
-            <artifactId>app-shared-api</artifactId>
-            <version>2.4.0-alpha.15</version>
-            <scope>provided</scope>
+            <artifactId>base-desktop</artifactId>
+            <version>2024.12.6</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zyneonstudios.nexus</groupId>
+            <artifactId>zyndex-java</artifactId>
+            <version>2024.12.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
@@ -48,7 +54,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zyneonstudios.nexus.application.api.DiscoverAPI</mainClass>
+                                    <mainClass>com.zyneonstudios.nexus.application.api.SharedAPI</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
