--- a/app/app-main/pom.xml
+++ b/app/app-main/pom.xml
@@ -21,6 +21,18 @@
 
     <dependencies>
         <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.16.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.zyneonstudios.nexus</groupId>
+            <artifactId>base-desktop</artifactId>
+            <version>2025.1.5</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
             <artifactId>app-shared-api</artifactId>
             <version>2.4.0-alpha.15</version>
