--- a/app/app-bootstrapper/pom.xml
+++ b/app/app-bootstrapper/pom.xml
@@ -54,7 +54,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zyneonstudios.nexus.Main</mainClass>
+                                    <mainClass>com.zyneonstudios.nexus.application.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
