--- a/app/app-main/pom.xml
+++ b/app/app-main/pom.xml
@@ -56,6 +56,14 @@
             <version>2.4.0-alpha.17</version>
             <scope>compile</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>live.nerotv.nexus</groupId>
+            <artifactId>app-minecraft-module</artifactId>
+            <version>3.0.0-alpha.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -73,7 +81,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.zyneonstudios.nexus.Main</mainClass>
+                            <mainClass>com.zyneonstudios.nexus.application.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -103,7 +111,7 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.zyneonstudios.nexus.Main</mainClass>
+                                    <mainClass>com.zyneonstudios.nexus.application.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
