Update app version structure

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -17,6 +17,7 @@
 
     <artifactId>app</artifactId>
     <packaging>pom</packaging>
+    <version>2025.3.1</version>
 
     <modules>
         <module>app-bootstrapper</module>
