--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,22 @@
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
             <artifactId>base-desktop</artifactId>
-            <version>2025.5.1</version>
+            <version>2025.5.4</version>
         </dependency>
         <dependency>
             <groupId>com.zyneonstudios.nexus</groupId>
             <artifactId>zyndex-java</artifactId>
-            <version>2025.4</version>
+            <version>2025.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.flowarg</groupId>
+            <artifactId>flowupdater</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.flowarg</groupId>
+            <artifactId>openlauncherlib</artifactId>
+            <version>3.2.11</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
